# omni

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: ccpp.yml
omni-app/: CMakeLists.txt
omni-app/src/: main.cpp
omni-app/src/precompiled/: precompiled.h
omni-lib/: CMakeLists.txt
omni-lib/src/: omni.h
omni-lib/src/engine/: buffer.h  engine.cpp  engine.h  render_commands.h  render_engine.cpp  render_engine.h  render_thread.h  shader.h  shader_program.h  window.cpp  window.h
omni-lib/src/precompiled/: precompiled.h
omni-lib/src/utilities/: barrier.h  uncopyable.h
omni-tests/: CMakeLists.txt
omni-tests/src/engine/: render_engine.cpp
omni-tests/src/precompiled/: precompiled.h
omni-tests/src/util/: barrier.cpp
scripts/cmake/: cotire.cmake  googletest.cmake  imgui.cmake  opengl.cmake  sdl.cmake
